# fetch-take-home

./: .gitignore  README.md  pyproject.toml  train_base_model.py  train_multitask_model.py  train_sentence_model.py
llm_tools/: datasets.py  typing.py  utils.py
llm_tools/modules/: layers.py  models.py
models/multitask-L2-42M-2025-03-15/: sentiment-classification-report.txt
